# jefqwen_eval

./: .gitignore  __init__.py  data_sampler.py  load.py  local_eval_fast.py  losses.py  manifest.py  openthought_mainfest.json  pyproject.toml  readme.md  readme_venv.md  shard_io.py
axolotl_config_v0/: accelerate_fsdp2.yaml  jefqwen_sample_1M_fft.yaml  readme.md
eval/: local_eval_datasets.json
